# Cleen

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: pre-commit.yaml
src/cleen/: __init__.py
src/cleen/matcher/: __init__.py  cem.py
src/cleen/preprocessor/: __init__.py  base.py  coarsen.py
test/: test_cem.py
